--- a/docs/api-reference/CRMScript.Global.Byte.yml
+++ b/docs/api-reference/CRMScript.Global.Byte.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+    - CRMScript.Global.Byte.#ctor
     - CRMScript.Global.Byte.#ctor(Integer)
     - CRMScript.Global.Byte.toBool()
     - CRMScript.Global.Byte.toString()
@@ -17,6 +18,23 @@ items:
   fullName: CRMScript.Global.Byte
   type: Class
   summary: "\nRepresents a byte. A byte can only contain integer values between 0 and 255. Large values will be masked.\n"
+- uid: CRMScript.Global.Byte.#ctor
+  commentId: M:CRMScript.Global.Byte.#ctor
+  id: '#ctor'
+  so.intellisense: Void.Byte
+  langs:
+  - crmscript
+  parent: CRMScript.Global.Byte
+  name: Byte()
+  nameWithType: Byte.Byte()
+  fullName: CRMScript.Global.Byte.Byte()
+  type: Constructor
+  summary: "\nDefault constructor.\n"
+  syntax:
+    content: Byte Byte()
+    parameters: []
+    return:
+      type: CRMScript.Global.Byte
 - uid: CRMScript.Global.Byte.#ctor(Integer)
   commentId: M:CRMScript.Global.Byte.#ctor(Integer)
   id: '#ctor(Integer)'
@@ -25,8 +43,8 @@ items:
   - crmscript
   parent: CRMScript.Global.Byte
   name: Byte(Integer)
-  nameWithType: Byte.#ctor(Integer)
-  fullName: CRMScript.Global.Byte.#ctor(Integer)
+  nameWithType: Byte.Byte(Integer)
+  fullName: CRMScript.Global.Byte.Byte(Integer)
   type: Constructor
   summary: "\nPass a number to copy into a new object.\n"
   syntax:
@@ -55,7 +73,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: hexadecimal representation of the byte
+      description: "Hexadecimal representation of the byte."
 - uid: CRMScript.Global.Byte.toHex(Integer)
   commentId: M:CRMScript.Global.Byte.toHex(Integer)
   id: toHex(Integer)
@@ -77,7 +95,7 @@ items:
       description: "The number of padding zeros."
     return:
       type: CRMScript.Global.String
-      description: hexadecimal representation of the byte with padding zeros
+      description: "Hexadecimal representation of the byte with padding zeros."
 - uid: CRMScript.Global.Byte.toString()
   commentId: M:CRMScript.Global.Byte.toString()
   id: toString()
@@ -112,7 +130,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: integer representation (0 - 255)"
+      description: "Integer representation (0 - 255)"
 - uid: CRMScript.Global.Byte.toBool()
   commentId: M:CRMScript.Global.Byte.toBool()
   id: toBool()
