--- a/docs/api-reference/CRMScript.Global.Float.yml
+++ b/docs/api-reference/CRMScript.Global.Float.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.Global.Float.#ctor
   - CRMScript.Global.Float.#ctor(Float)
   - CRMScript.Global.Float.#ctor(Integer)
   - CRMScript.Global.Float.#ctor(String)
@@ -21,6 +22,23 @@ items:
   summary: "\nA class for representing floating point numbers as objects. Floats are approximations of real numbers written with decimals. If you don't need to work with decimals, use the Integer data type.\n"
   example:
   - "\n<pre><code>Integer i = 42;\nFloat f = 3.14;</code></pre>\n"
+- uid: CRMScript.Global.Float.#ctor
+  commentId: M:CRMScript.Global.Float.#ctor
+  id: '#ctor'
+  langs:
+  - crmscript
+  parent: CRMScript.Global.Float
+  name: Float()
+  nameWithType: Float.Float()
+  fullName: CRMScript.Global.Float.Float()
+  type: Constructor
+  summary: "\nDefault constructor.\n"
+  example:
+  syntax:
+    content: Float Float()
+    parameters: []
+    return:
+      type: CRMScript.Global.Float
 - uid: CRMScript.Global.Float.#ctor(Float)
   commentId: M:CRMScript.Global.Float.#ctor(Float)
   id: '#ctor(Float)'
@@ -39,7 +57,7 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Float
-      description: Float object."
+      description: "Float object."
     return:
       type: CRMScript.Global.Float
 - uid: CRMScript.Global.Float.#ctor(Integer)
@@ -60,7 +78,7 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Integer
-      description: Integer object."
+      description: "Integer object."
     return:
       type: CRMScript.Global.Float
 - uid: CRMScript.Global.Float.#ctor(String)
@@ -104,7 +122,7 @@ items:
     parameters:
     - id: decimals
       type: CRMScript.Global.Integer
-      description: Number of decimal digits."
+      description: "Number of decimal digits."
     return:
       type: CRMScript.Global.String
 - uid: CRMScript.Global.Float.abs()
