--- a/docs/api-reference/CRMScript.Global.Integer.yml
+++ b/docs/api-reference/CRMScript.Global.Integer.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+    - CRMScript.Global.Integer.#ctor
     - CRMScript.Global.Integer.#ctor(Integer)
     - CRMScript.Global.Integer.#ctor(String)
     - CRMScript.Global.Integer.toString()
@@ -19,6 +20,23 @@ items:
   fullName: CRMScript.Global.Integer
   type: Class
   summary: "\nIntegers are positive and negative whole numbers without decimals. If you need to work with decimals, use the Float data type.\n"
+- uid: CRMScript.Global.Integer.#ctor
+  commentId: M:CRMScript.Global.Integer.#ctor
+  id: '#ctor'
+  so.intellisense: Void.Integer
+  langs:
+  - crmscript
+  parent: CRMScript.Global.Integer
+  name: Integer()
+  nameWithType: Integer.Integer()
+  fullName: CRMScript.Global.Integer.Integer()
+  type: Constructor
+  summary: "\nDefault constructor.\n"
+  syntax:
+    content: Integer Integer()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
 - uid: CRMScript.Global.Integer.#ctor(Integer)
   commentId: M:CRMScript.Global.Integer.#ctor(Integer)
   id: '#ctor(Integer)'
@@ -36,7 +54,7 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Integer
-      description: Integer object."
+      description: "Integer object."
     return:
       type: CRMScript.Global.Integer
 - uid: CRMScript.Global.Integer.#ctor(String)
@@ -155,7 +173,7 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Integer
-      description: Integer object. The value to convert to hex."
+      description: "Integer object. The value to convert to hex."
     return:
       type: CRMScript.Global.String
 - uid: CRMScript.Global.Integer.isNull()
