--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+    - CRMScript.Global.String.#ctor
     - CRMScript.Global.String.#ctor(String)
     - CRMScript.Global.String.#ctor(Byte[])
     - CRMScript.Global.String.#ctor(Byte[], String)
@@ -81,6 +82,25 @@ items:
   summary: "\nA text string is a sequence of characters written with quotes.<p></p>\nYou can use single or double quotes, but they must always come in pairs. Quotes can also be nested, by alternating between single and double quotes.\n"
   example:
   - "\n<pre><code>String myCompany = &quot;SuperOffice&quot;;\nString myLocation = 'Oslo';\nString onion = &quot;The 'onion' has many layers.&quot;;</code></pre>\n"
+- uid: CRMScript.Global.String.#ctor
+  commentId: M:CRMScript.Global.String.#ctor
+  id: '#ctor'
+  so.intellisense: Void.String
+  langs:
+  - crmscript
+  parent: CRMScript.Global.String
+  name: String
+  nameWithType: String.String
+  fullName: CRMScript.Global.String.String
+  type: Constructor
+  summary: "\nDefault constructor.\n"
+  example:
+  syntax:
+    content: String String()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: "A new String object."
 - uid: CRMScript.Global.String.#ctor(String)
   commentId: M:CRMScript.Global.String.#ctor(String)
   id: '#ctor(String)'
@@ -231,7 +251,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string only contains lowercase characters."
+      description: "True if the string only contains lowercase characters."
 - uid: CRMScript.Global.String.isUpper()
   commentId: M:CRMScript.Global.String.isUpper()
   id: isUpper()
@@ -250,7 +270,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string only contains uppercase characters."
+      description: "True if the string only contains uppercase characters."
 - uid: CRMScript.Global.String.equals(String)
   commentId: M:CRMScript.Global.String.equals(String)
   id: equals(String)
@@ -273,7 +293,7 @@ items:
       description: "The string to compare with."
     return:
       type: CRMScript.Global.Bool
-      description: True if they are equal."
+      description: "True if they are equal."
 - uid: CRMScript.Global.String.equalsIgnoreCase(String)
   commentId: M:CRMScript.Global.String.equalsIgnoreCase(String)
   id: equalsIgnoreCase(String)
@@ -296,7 +316,7 @@ items:
       description: "The string to compare with."
     return:
       type: CRMScript.Global.Bool
-      description: True if the strings are equal."
+      description: "True if the strings are equal."
 - uid: CRMScript.Global.String.beginsWith(String)
   commentId: M:CRMScript.Global.String.beginsWith(String)
   id: beginsWith(String)
@@ -320,7 +340,7 @@ items:
       description: "The pattern you wish to match against."
     return:
       type: CRMScript.Global.Bool
-      description: True if the string object begins with the string given as the parameter, taking the case into account."
+      description: "True if the string object begins with the string given as the parameter, taking the case into account."
 - uid: CRMScript.Global.String.caseBeginsWith(String)
   commentId: M:CRMScript.Global.String.caseBeginsWith(String)
   id: caseBeginsWith(String)
@@ -341,7 +361,7 @@ items:
       description: "The pattern you wish to match against."
     return:
       type: CRMScript.Global.Bool
-      description: True if the string object begins with the string given as the parameter, regardless of the case."
+      description: "True if the string object begins with the string given as the parameter, regardless of the case."
 - uid: CRMScript.Global.String.endsWith(String)
   commentId: M:CRMScript.Global.String.endsWith(String)
   id: endsWith(String)
@@ -365,7 +385,7 @@ items:
       description: "The pattern you wish to match against."
     return:
       type: CRMScript.Global.Bool
-      description: True if the string object ends with the string given as the parameter taking the case into account."
+      description: "True if the string object ends with the string given as the parameter taking the case into account."
 - uid: CRMScript.Global.String.caseEndsWith(String)
   commentId: M:CRMScript.Global.String.caseEndsWith(String)
   id: caseEndsWith(String)
@@ -386,7 +406,7 @@ items:
       description: "The pattern you wish to match against."
     return:
       type: CRMScript.Global.Bool
-      description: True if the string object ends with the string given as the parameter regardless of case."
+      description: "True if the string object ends with the string given as the parameter regardless of case."
 - uid: CRMScript.Global.String.compare(String)
   commentId: M:CRMScript.Global.String.compare(String)
   id: compare(String)
@@ -409,7 +429,7 @@ items:
       description: "The string to compare with (s2)."
     return:
       type: CRMScript.Global.Integer
-      description: \<0 if this is lexically smaller than the value, 0 if equal, and >0 if this is lexically larger."
+      description: "&lt;0 if this is lexically smaller than the value, 0 if equal, and >0 if this is lexically larger."
 - uid: CRMScript.Global.String.caseCompare(String)
   commentId: M:CRMScript.Global.String.caseCompare(String)
   id: caseCompare(String)
@@ -432,7 +452,7 @@ items:
       description: "The string to compare with (s2)."
     return:
       type: CRMScript.Global.Integer
-      description: \<0 if this is lexically smaller than the value, 0 if equal, and >0 if this is lexically larger
+      description: "&lt;0 if this is lexically smaller than the value, 0 if equal, and >0 if this is lexically larger."
 - uid: CRMScript.Global.String.append(String)
   commentId: M:CRMScript.Global.String.append(String)
   id: append(String)
@@ -526,7 +546,7 @@ items:
       description: "The string to find."
     return:
       type: CRMScript.Global.Integer
-      description: First index of the substring."
+      description: "First index of the substring."
 - uid: CRMScript.Global.String.findCase(String)
   commentId: M:CRMScript.Global.String.findCase(String)
   id: findCase(String)
@@ -548,7 +568,7 @@ items:
       description: "The string to find."
     return:
       type: CRMScript.Global.Integer
-      description: First index of the substring or -1."
+      description: "First index of the substring or -1."
 - uid: CRMScript.Global.String.findLast(String)
   commentId: M:CRMScript.Global.String.findLast(String)
   id: findLast(String)
@@ -689,7 +709,7 @@ items:
       description: "The patter where to start copying."
     return:
       type: CRMScript.Global.String
-      description: What follows the pattern."
+      description: "What follows the pattern."
 - uid: CRMScript.Global.String.afterLast(String)
   commentId: M:CRMScript.Global.String.afterLast(String)
   id: afterLast(String)
@@ -731,7 +751,7 @@ items:
     parameters:
     - id: delimiter
       type: CRMScript.Global.String
-      description: Where to split the string."
+      description: "Where to split the string."
     return:
       type: CRMScript.Global.String[]
       description: "Array of substrings."
@@ -755,7 +775,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string only contains alphabetic characters."
+      description: "True if the string only contains alphabetic characters."
 - uid: CRMScript.Global.String.isDigit()
   commentId: M:CRMScript.Global.String.isDigit()
   id: isDigit()
@@ -791,7 +811,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string only contains alphabetic characters or digits."
+      description: "True if the string only contains alphabetic characters or digits."
 - uid: CRMScript.Global.String.isNull()
   commentId: M:CRMScript.Global.String.isNull()
   id: isNull()
@@ -809,7 +829,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string is NULL/NUL/NIL."
+      description: "True if the string is NULL/NUL/NIL."
 - uid: CRMScript.Global.String.isEmpty()
   commentId: M:CRMScript.Global.String.isEmpty()
   id: isEmpty()
@@ -829,7 +849,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the String contains no characters."
+      description: "True if the String contains no characters."
 - uid: CRMScript.Global.String.toBool()
   commentId: M:CRMScript.Global.String.toBool()
   id: toBool()
@@ -975,7 +995,7 @@ items:
     parameters:
     - id: chars
       type: CRMScript.Global.String
-      description: Special characters which will be escaped with a backslash."
+      description: "Special characters which will be escaped with a backslash."
     return:
       type: CRMScript.Global.String
       description: "The escaped coded string."
@@ -996,7 +1016,7 @@ items:
     parameters:
     - id: convertBodyToDiv
       type: CRMScript.Global.Bool
-      description: Replace the body tag with a div tag?
+      description: "Replace the body tag with a div tag?"
     return:
       type: CRMScript.Global.String
       description: "The body content of a string containing an HTML document"
@@ -1017,7 +1037,7 @@ items:
     parameters:
     - id: stripTitle
       type: CRMScript.Global.Bool
-      description: Omit the title tag?
+      description: "Omit the title tag?"
     return:
       type: CRMScript.Global.String
       description: "The head content of a string containing an HTML document"
@@ -1038,7 +1058,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if HTML-document, otherwise false."
+      description: "True if HTML-document, otherwise false."
 - uid: CRMScript.Global.String.htmlDecode()
   commentId: M:CRMScript.Global.String.htmlDecode()
   id: htmlDecode()
@@ -1093,7 +1113,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Native.Vector
-      description: Vector of names and emails
+      description: "Vector of names and emails."
 - uid: CRMScript.Global.String.isValidEmail()
   commentId: M:CRMScript.Global.String.isValidEmail()
   id: isValidEmail()
@@ -1111,7 +1131,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string is a valid email address."
+      description: "True if the string is a valid email address."
 - uid: CRMScript.Global.String.getLine()
   commentId: M:CRMScript.Global.String.getLine()
   id: getLine()
@@ -1173,7 +1193,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string can be converted to an integer, false otherwise."
+      description: "True if the string can be converted to an integer, false otherwise."
 - uid: CRMScript.Global.String.urlDecode()
   commentId: M:CRMScript.Global.String.urlDecode()
   id: urlDecode()
@@ -1299,10 +1319,10 @@ items:
     parameters:
     - id: charsToKeep
       type: CRMScript.Global.String
-      description: "A string of characters to keep"
+      description: "A string of characters to keep."
     return:
       type: CRMScript.Global.String
-      description: String stripped from all other characters
+      description: "String stripped from all other characters."
 - uid: CRMScript.Global.String.parseCSV(String)
   commentId: M:CRMScript.Global.String.parseCSV(String)
   id: parseCSV(String)
@@ -1344,7 +1364,7 @@ items:
     parameters:
     - id: language
       type: CRMScript.Global.Integer
-      description: Language code."
+      description: "Language code."
     return:
       type: CRMScript.Global.String
 - uid: CRMScript.Global.String.prettyChop(Integer)
@@ -1494,7 +1514,7 @@ items:
       description: "The number of characters per line after wrapping."
     - id: ignoreQuote
       type: CRMScript.Global.Bool
-      description: True if you do not want quoted lines to be wrapped, else false."
+      description: "True if you do not want quoted lines to be wrapped, else false."
     return:
       type: CRMScript.Global.String
 references:
